# remote-simgrid

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  FindSimGrid.cmake  README.md  RsgService.thrift  circle.yml  default.nix  developer_notes.md  jenkins.sh  meson.build  meson_options.txt  rsg.capnp  rsg.proto  shell.nix  sonar-project.properties  sonarqube.sh  testCpp  testJava
java/: CMakeLists.txt  deploy_java.xml  dumbClient.java  testJava
src/: CMakeLists.txt  Makefile  README.rst  RsgServiceImpl.cpp  command.c  command.h  common.hpp  deploy.xml  dumb_client.cpp  dumb_server.cpp  jsmn.c  librsg.hpp  main_server.cpp  request.c  request.h  rsg.proto  rsg_actor.cpp  rsg_engine.cpp  rsg_process.cpp  rsg_server.cpp  server.cpp  socket.c  socket.h
src/client/: ClientEngine.cpp  RsgBinaryProtocol.h  RsgClient.cpp  RsgClient.hpp  RsgClientEngine.cpp  TZmqClient.cpp  TZmqClient.hpp  multiThreadedSingletonFactory.cpp  multiThreadedSingletonFactory.hpp  rsg_actor.cpp  rsg_client.cpp  rsg_comm.cpp  rsg_conditionVariable.cpp  rsg_engine.cpp  rsg_global_service.cpp  rsg_host.cpp  rsg_kvs.cpp  rsg_mailbox.cpp  rsg_mutex.cpp
src/common/: assert.hpp  message.hpp
src/common/network/: selector.cpp  selector.hpp  tcp_listener.cpp  tcp_listener.hpp  tcp_socket.cpp  tcp_socket.hpp
src/common/protobuf/: rsg.pb.cc  rsg.pb.h
src/librsg/: actor.cpp  actor.hpp  client.cpp  client.hpp  comm.cpp  comm.hpp  condition_variable.cpp  condition_variable.hpp  connection.cpp  connection.hpp  engine.cpp  engine.hpp  host.cpp  host.hpp  log.hpp  mailbox.cpp  mailbox.hpp  mutex.cpp  mutex.hpp  pointers.hpp
src/rsg/: RsgServiceImpl.cpp  RsgThriftServer.cpp  RsgThriftServer.hpp  RsgThriftServerFramework.cpp  RsgThriftSimpleServer.cpp  RsgThriftSimpleServer.hpp  Server.cpp  Server.hpp  Socket.cpp  StatusServer.cpp  StatusServer.hpp  TZmqServer.cpp  TZmqServer.hpp  interthread_messaging.cpp  interthread_messaging.hpp  jsmn.c  jsmn.h  kill.cpp  kill.hpp  main.cpp  parsespace.c  protocol.c  protocol_priv.h  request.c  serve.cpp  serve.hpp  services.hpp  simple_commands.cpp  simple_commands.hpp  simulation.cpp  simulation.hpp  socket.c  socket.cpp  socket.h  socket.hpp  status.cpp  status.hpp
src/rsg/services/: KVSService.cpp  KVSService.hpp  actorService.cpp  actorService.hpp  commService.cpp  commService.hpp  conditionVariableService.cpp  conditionVariableService.hpp  engineService.cpp  engineService.hpp  globalService.cpp  hostService.cpp  hostService.hpp  mailboxService.cpp  mailboxService.hpp  mutexService.cpp  mutexService.hpp
src/rsgstat/: main_rsgstat.cpp
src/server/: Server.cpp  Socket.cpp
tests/: CMakeLists.txt  meson.build  next-test-port.bash  print.hpp
tests/actor/: CMakeLists.txt  create-connection-hooks.tesh  create-invalid.tesh  create-thread-race.tesh  create.tesh  create_connection_hooks.tesh  execute.tesh  fork.tesh  main_client.cpp  main_server_test.cpp  sleep_for.tesh  sleep_until.tesh  whoami-nofork.tesh  whoami.tesh  yield.tesh
tests/actor/basic/: CMakeLists.txt  client_test.tesh  deploy.xml.in  main.cpp
tests/actor/dataActor/: CMakeLists.txt  client_test.tesh  deploy.xml.in  main.cpp
tests/actor/externalActor/: CMakeLists.txt  client_test.tesh  deploy.xml.in  main.cpp
tests/actor/fork/: CMakeLists.txt  client_test.tesh  deploy.xml.in  main.cpp
tests/actor/fork_from_spawned_actor/: CMakeLists.txt  client_test.tesh  deploy.xml.in  main.cpp
tests/actor/getPPID/: CMakeLists.txt  client_test.tesh  deploy.xml.in  main.cpp
tests/actor/joinActor/: CMakeLists.txt  client_test.tesh  deploy.xml.in  main.cpp
tests/actor/joinActorTrivial/: CMakeLists.txt  client_test.tesh  deploy.xml.in  main.cpp
tests/actor/killActor/: CMakeLists.txt  client_test.tesh  deploy.xml.in  main.cpp
tests/actor/killActorPid/: CMakeLists.txt  main.cpp  (+2 more)
tests/basic/: CMakeLists.txt  basic.tesh  basic_node1.cpp  basic_node2.cpp  client_test.tesh  deploy.xml.in  main_client.cpp  main_server.cpp  main_server_test.cpp
tests/clients/: actor_create.cpp  actor_create_connection_hooks.cpp  actor_create_invalid.cpp  actor_create_thread_race.cpp  actor_execute.cpp  actor_fork.cpp  actor_whoami.cpp  actor_yield.cpp  comm_waitany.cpp  condvar_notify_all.cpp  hello.cpp  hello_manual_connect.cpp  host_finder.cpp  mailbox_receiver.cpp  mailbox_receiver_async.cpp  mailbox_sender.cpp  mailbox_sender_async.cpp  malicious_actor_id.cpp  malicious_port.cpp  mutant.cpp  ompi1.cpp  segfault.cpp  sleep_for.cpp  sleep_until.cpp
tests/comm/: CMakeLists.txt  deploy.xml.in  main_client.cpp  main_server_test.cpp  waitany.tesh
tests/condvar/: notify_all.tesh
tests/dumb_client/: CMakeLists.txt  client_test.tesh  deploy.xml.in  dumb_client.cpp  dumb_server.cpp
tests/host/: finder.tesh
tests/hostname/: CMakeLists.txt  deploy.xml.in  hostname.cpp  hostname_test.tesh
tests/mailbox/: asyncsend-asyncreceive.tesh  asyncsend-receive.tesh  send-asyncreceive.tesh  send-receive.tesh
tests/malicious/: actor-id.tesh  port.tesh
tests/misc/: process-mutation.tesh  think-time-measured.tesh  think-time.tesh  time-autoincrease.cpp
tests/resources/: data.kvs  dissimilar_two_hosts_platform.xml  three_multicore_hosts.xml  two_hosts_platform.xml  two_hosts_platform_with_props.xml
tests/rsg-cli/: add-actor.tesh  kill.tesh  serve-add-actor-bad-cmd.tesh  serve-add-actor-start-manual-connect.tesh  serve-add-actor-start-segfault.tesh  serve-add-actor-start.tesh  serve-daemon.tesh  serve-kill-port.tesh  serve-kill.tesh  start.tesh  status-retry-timeout.tesh  status.tesh
tests/s4u-clone/: actor-create.cpp  actor-create.tesh  actor-join.cpp  actor-join.tesh  comm-wait.cpp  comm-wait.tesh  synchro-condition-variable-waitfor.cpp  synchro-condition-variable-waitfor.tesh  synchro-condition-variable-waituntil.cpp  synchro-condition-variable-waituntil.tesh  synchro-condition-variable.cpp  synchro-condition-variable.tesh  synchro-mutex.cpp  synchro-mutex.tesh
tests/turnOffTurnOn/: CMakeLists.txt  client_test.tesh  deploy.xml.in  main.cpp  simple_client.cpp
tests/use-case/: connection-burst.tesh  ompi1.tesh
(+156 files in other folders)
